doBy v4.6.8 (Release date: 2020-09-xx)
========================================

* sapplyBy / sapply_by added

* subSeq works on factors now (coerces to character)

* sub_seq added; synonymous to subSeq

* rle2 added; similar to rle but works also on factors

* is_grouped added

* math / mathmark dataset added. 


doBy v4.6.7 (Release date: 2020-07-07)
========================================

* interaction_plot (based on ggplot2 etc) added. 

doBy v4.6.6 (Release date: 2020-06-16)
========================================

Bug fixes:

  * esticon.gls is now exported

  * xxx_by functions matching xxxBy introduced. xxx_by functions take
    data as first argument and work therefore well with the pipe.



doBy v4.6.5 (Release date: 2020-02-21)
========================================

Bug fixes:

  * Minor issues related to checks made by the development version of
    R.

doBy v4.6-4.1 (Release date: 2020-02-03)
========================================

Changes:

  * NAMESPACE file is being generated automatically


doBy v4.6-4 (Release date: 2020-02-01)
=======================================

Changes:

  * Issue related to class vs inherits solved
  * NEWS file added
  * Update of fev data
  * cropyield data added.


doBy v4.6-3 (Release date: 2019-10-23)
=======================================

Bug fixes:

  * LE_matrix etc. handles a dataframe correctly for the 'at' argument

Changes:

  * taylor function added
  * fev data from isdals added
  * lmBy reintroduced due to popular demand.

doBy v4.6-2 (Release date: 2018-08-30)
=======================================
	
Changes

  * sampleBy and lapplyBy functions reintroduced due to popular demand.

doBy v4.6-1 (Release date: 2018-03-19)
=======================================

Changes:

  * Previous functionality of core xxBy-functions reestablished to
    ensure that downstream packages work.

