@@ -26,6 +26,7 @@ S3method(get_contrasts,merMod)
 S3method(get_xlevels,default)
 S3method(get_xlevels,mer)
 S3method(get_xlevels,merMod)
+S3method(head,splitByData)
 S3method(lastobs,default)
 S3method(lastobs,formula)
 S3method(linest,geeglm)
@@ -46,6 +47,7 @@ S3method(summary,esticon_class)
 S3method(summary,linest_class)
 S3method(summary,linest_matrix_class)
 S3method(summary,lmBy)
+S3method(tail,splitByData)
 S3method(tidy,esticon_class)
 S3method(tidy,linest_class)
 S3method(vcov,esticon_class)
@@ -138,7 +140,9 @@ importFrom(stats,summary.lm)
 importFrom(stats,terms)
 importFrom(stats,vcov)
 importFrom(tibble,as_tibble)
+importFrom(utils,head)
 importFrom(utils,str)
+importFrom(utils,tail)
 importMethodsFrom(Matrix,"%*%")
 importMethodsFrom(Matrix,diag)
 importMethodsFrom(Matrix,isSymmetric)
